--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,9 @@ stages:
 deploy_job:
   stage: deploy
   script:
+    - ls -la
+    - git remote -v
+    - git log
     - git remote add github https://$GITHUB_TOKEN:@github.com/yun-ink/timerx.git
     - git push github master
   only:
