更新.gitlab-ci.yml文件

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ deploy_job:
     - ls -la
     - git remote -v
     - git log
-    - git remote add github https://$GITHUB_TOKEN:@github.com/yun-ink/timerx.git
+    - git remote add github https://${GITHUB_TOKEN}:@github.com/yun-ink/timerx.git
     - git push github master
   only:
     - master
