--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ deploy_job:
   script:
     - echo "$GITHUB_TOKEN" > /etc/ssl/certs/github_token.pem
     - git config --global http.sslCAInfo /etc/ssl/certs/github_token.pem
+    - git remote remove github || true
     - git remote add github https://github.com/yun-ink/timerx.git
     - git remote -v
     - git branch
