--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ deploy_job:
     - git remote remove github || true
     - git remote add github git@github.com:yun-ink/timerx.git
     - git remote -v
-    - git checkout -b master
+    - git checkout master
     - git branch
     - git push github master
   only:
