更新.gitlab-ci.yml文件

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ deploy_job:
     - git remote add github git@github.com:yun-ink/timerx.git
     - git remote -v
     - git checkout master
+    - git fsck --full
     - git push -u github master
   only:
     - master
